--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,15 +16,20 @@ jobs:
         run: |
           echo "Variáveis de Ambiente:"
           printenv    
+      
       - name: pull
-        run: git pull
+        run: |
+          git pull
+      
       - name: Checkout
         uses: actions/checkout@v4
+      
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
