--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: self-hosted
     strategy:
       matrix:
-        test: [test-1, test-2, test-3, test-4]
+        test: [test-1, test-2, test-3]
     steps:
       - name: sleep
         run: sleep 300
