--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -6,6 +6,7 @@ jobs:
     strategy:
       matrix:
         test: [test-1, test-2, test-3]
+      parallel: true  
     steps:
       - name: sleep
         run: sleep 300
