--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -4,9 +4,9 @@ jobs:
   CI:
     runs-on: self-hosted
     strategy:
+      max-parallel: 2
       matrix:
         test: [test-1, test-2, test-3]
-        parallel: true
     steps:
       - name: sleep
         run: sleep 300
