--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: self-hosted
     concurrency:
       group: ${{ github.ref }}
-      cancel-in-progress: true
+      cancel-in-progress: false
     strategy:
       max-parallel: 2
       matrix:
