--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -1,14 +1,12 @@
 name: ci2
-on: push
- 
+on: workflow_dispatch
 jobs:
   CI:
-    name: CI Tests
     runs-on: self-hosted
     strategy:
       matrix:
-        max-parallel: 2
-        test: [test-1, test-2]
+        test: [test-1, test-2, test-3]
+        max-parallel: 3  # Certifique-se de que esta linha esteja indentada corretamente
     steps:
       - name: sleep
         run: sleep 300
