--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -5,8 +5,7 @@ jobs:
     runs-on: self-hosted
     strategy:
       matrix:
-        test: [test-1, test-2, test-3]
-        max-parallel: 2  # Indented under 'matrix'
+        test: [test-1, test-2]
     steps:
       - name: sleep
         run: sleep 300
