--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -1,1 +1,12 @@
-
+name: ci2
+on: workflow_dispatch
+jobs:
+  CI:
+    runs-on: codebuild-runner-github-action-${{ github.run_id }}-${{ github.run_attempt }}
+    strategy:
+      matrix:
+        test: [test-1, test-2]
+    steps:
+      - name: sleep
+        run: sleep 300
+        shell: bash
